Overwrite inherited whitespace. Issue: #695

--- a/static/css/inbox.less
+++ b/static/css/inbox.less
@@ -332,6 +332,10 @@ body {
     white-space: nowrap;
     overflow: hidden;
 
+    span {
+      white-space: normal;
+    }
+
     .mm-badge {
       float: left;
     }
@@ -361,6 +365,10 @@ body {
 
   .alert {
     margin: 1em;
+  }
+
+  .time {
+    margin-left: 1em;
   }
 
 }
